--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -3,7 +3,7 @@ body {
   background: #00F260;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #0575E6, #00F260);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #0575E6, #00F260); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
+
 }
 
 h1{
@@ -82,3 +82,8 @@ li:hover span{
   float: right;
 }
 
+@media screen and (max-width: 480px) {
+  .container{
+    width: 90%;
+  }
+}
