--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -83,7 +83,7 @@ li:hover span{
 }
 
 @media screen and (max-width: 480px) {
-  .container{
-    width: 90%;
+  #container{
+    width: 95%;
   }
 }
